tests/errors/type_check/error_span/structured_duplicate_declaration_at_name_span.sim

        struct S { x: i64 }
        struct S { y: i64 }
        fn f() { entry: return }
