tests/errors/type_check/error_span/structured_duplicate_declaration_at_name_span.err.expected
error: at 3:16: [TC-DuplicateDeclaration] Duplicate declaration of type 'S'
   |
 3 |         struct S { y: i64 }
   |                ^
